--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <meta name="description" content="Viaggio a Londra" />
     <meta name="keywords" content="Viaggio, Londra, Regno Unito" />
 </head>
+
 <body>
-    
+    <!--Titolo e immagini-->
+    <header>
+        <h1>
+            Il mio Viaggio a Londra
+        </h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+    </header>
+
+
 </body>
+
+
+
 </html>
