--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
     </header>
     <main>
-        <!--Spese e tabella spese-->
+        <!--Spese e tabella-->
         <hr />
         <h2>
             Le mie spese
         </h2>
 
         <table>
+            <!--Intestazione tabella-->
             <thead>
                 <tr>
                     <th>Numero</th>
@@ -33,6 +34,7 @@
                     <th>Costo</th>
                 </tr>
             </thead>
+            <!--Corpo tabella-->
             <tbody>
                 <tr>
                     <td>1</td>
@@ -50,6 +52,7 @@
                     <td>120€</td>
                 </tr>
             </tbody>
+            <!--Chiusura Tabella-->
             <tfoot>
                 <tr>
                     <td>Totale</td>
