--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!--Titolo e immagini-->
+            <!--Titolo e immagini-->
     <header>
         <h1>
             Il mio Viaggio a Londra
@@ -19,7 +19,7 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
     </header>
     <main>
-        <!--Spese e tabella-->
+            <!--Spese e tabella-->
         <hr />
         <h2>
             Le mie spese
@@ -61,6 +61,20 @@
                 </tr>
             </tfoot>
         </table>
+
+        <hr />
+            <!--Lista cose da fare-->
+        <h3>
+            Cose da fare
+        </h3>
+        <ul>
+            <li>Visitare la Tower of London &#10007;</li>
+            <li>Visitare greenwich &#10003;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
+        </ul>
+
+        <hr />
     </main>
 
 
