--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-            <!--Titolo e immagini-->
+        <!--Titolo e immagini-->
     <header>
         <h1>
             Il mio Viaggio a Londra
@@ -19,14 +19,15 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
     </header>
     <main>
-            <!--Spese e tabella-->
+        <!--Spese e tabella-->
         <hr />
+        
         <h2>
             Le mie spese
         </h2>
 
         <table>
-            <!--Intestazione tabella-->
+        <!--Intestazione tabella-->
             <thead>
                 <tr>
                     <th>Numero</th>
@@ -34,7 +35,7 @@
                     <th>Costo</th>
                 </tr>
             </thead>
-            <!--Corpo tabella-->
+        <!--Corpo tabella-->
             <tbody>
                 <tr>
                     <td>1</td>
@@ -52,7 +53,7 @@
                     <td>120€</td>
                 </tr>
             </tbody>
-            <!--Chiusura Tabella-->
+        <!--Chiusura Tabella-->
             <tfoot>
                 <tr>
                     <td>Totale</td>
@@ -63,7 +64,7 @@
         </table>
 
         <hr />
-            <!--Lista cose da fare-->
+        <!--Lista cose da fare-->
         <h3>
             Cose da fare
         </h3>
@@ -75,6 +76,31 @@
         </ul>
 
         <hr />
+        <!--Informazioni e Contatti-->
+        <h4>
+            Info utili:
+        </h4>
+        <ol>
+            <li>Numeri utili di emergenza</li>
+            <ul>
+                <li><strong>999</strong> - Emergenza</li>
+                <li><strong>101</strong> - Numero polizia</li>
+                <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+            <li>Hotel</li>
+            <ul>
+                <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
+            </ul>
+            <li>Aereo</li>
+            <ul>
+                <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
+            </ul>
+        </ol>
+
+        <hr />
+        
     </main>
 
 
