--- a/index.html
+++ b/index.html
@@ -1,111 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il mio Viaggio a Londra</title>
-    <meta name="description" content="Viaggio a Londra" />
-    <meta name="keywords" content="Viaggio, Londra, Regno Unito" />
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Il mio Viaggio a Londra</title>
+        <meta name="description" content="Viaggio a Londra" />
+        <meta name="keywords" content="Viaggio, Londra, Regno Unito" />
+    </head>
 
-<body>
-        <!--Titolo e immagini-->
-    <header>
-        <h1>
-            Il mio Viaggio a Londra
-        </h1>
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
-    </header>
-    <main>
-        <!--Spese e tabella-->
-        <hr />
-        
-        <h2>
-            Le mie spese
-        </h2>
+    <body>
+            <!--Titolo e immagini-->
+        <header>
+            <h1>
+                Il mio Viaggio a Londra
+            </h1>
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        </header>
+        <main>
+            <!--Spese e tabella-->
+            <hr />
 
-        <table>
-        <!--Intestazione tabella-->
-            <thead>
-                <tr>
-                    <th>Numero</th>
-                    <th>Descrizione</th>
-                    <th>Costo</th>
-                </tr>
-            </thead>
-        <!--Corpo tabella-->
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120€</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120€</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120€</td>
-                </tr>
-            </tbody>
-        <!--Chiusura Tabella-->
-            <tfoot>
-                <tr>
-                    <td>Totale</td>
-                    <td></td>
-                    <td>360€</td>
-                </tr>
-            </tfoot>
-        </table>
+            <h2>
+                Le mie spese
+            </h2>
 
-        <hr />
-        <!--Lista cose da fare-->
-        <h3>
-            Cose da fare
-        </h3>
-        <ul>
-            <li>Visitare la Tower of London &#10007;</li>
-            <li>Visitare greenwich &#10003;</li>
-            <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
-            <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
-        </ul>
+            <table>
+            <!--Intestazione tabella-->
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+            <!--Corpo tabella-->
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+            <!--Chiusura Tabella-->
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+            </table>
 
-        <hr />
-        <!--Informazioni e Contatti-->
-        <h4>
-            Info utili:
-        </h4>
-        <ol>
-            <li>Numeri utili di emergenza</li>
+            <hr />
+            <!--Lista cose da fare-->
+            <h3>
+                Cose da fare
+            </h3>
             <ul>
-                <li><strong>999</strong> - Emergenza</li>
-                <li><strong>101</strong> - Numero polizia</li>
-                <li><strong>111</strong> - Numero assistenza medica</li>
+                <li>Visitare la Tower of London &#10007;</li>
+                <li>Visitare greenwich &#10003;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
             </ul>
-            <li>Hotel</li>
-            <ul>
-                <li><strong>Nome hotel</strong>: Buckingham Palace</li>
-                <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
-            </ul>
-            <li>Aereo</li>
-            <ul>
-                <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
-                <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
-            </ul>
-        </ol>
 
-        <hr />
-        
-    </main>
+            <hr />
+            <!--Informazioni e Contatti-->
+            <h4>
+                Info utili:
+            </h4>
+            <ol>
+                <li>Numeri utili di emergenza</li>
+                <ul>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numero polizia</li>
+                    <li><strong>111</strong> - Numero assistenza medica</li>
+                </ul>
+                <li>Hotel</li>
+                <ul>
+                    <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                    <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
+                </ul>
+                <li>Aereo</li>
+                <ul>
+                    <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                    <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
+                </ul>
+            </ol>
 
-
-</body>
-
-
-
+            <hr />
+            <!--Foto scattate-->
+            <footer>
+                <h4>Le foto</h4>
+                <img src="img/london-400x400-compressor_0.jpg" alt="">
+                <img src="img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="">
+            </footer>
+        </main>
+    </body>
 </html>
