--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Il mio Viaggio a Londra</title>
+        <meta name="author"   content="Francesco Giommi"  />
         <meta name="description" content="Viaggio a Londra" />
         <meta name="keywords" content="Viaggio, Londra, Regno Unito" />
     </head>
@@ -81,22 +82,25 @@
                 Info utili:
             </h4>
             <ol>
-                <li>Numeri utili di emergenza</li>
-                <ul>
-                    <li><strong>999</strong> - Emergenza</li>
-                    <li><strong>101</strong> - Numero polizia</li>
-                    <li><strong>111</strong> - Numero assistenza medica</li>
-                </ul>
-                <li>Hotel</li>
-                <ul>
-                    <li><strong>Nome hotel</strong>: Buckingham Palace</li>
-                    <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
-                </ul>
-                <li>Aereo</li>
-                <ul>
-                    <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
-                    <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
-                </ul>
+                <li>Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li>Hotel
+                    <ul>
+                        <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>Aereo
+                    <ul>
+                        <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
+                    </ul>
+                </li>
             </ol>
 
             <hr />
